examples/test/testpolicy116.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy116
  namespace: namespace39
spec:
  podSelector:
    matchLabels:
      key16: value43
      key13: value3
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key29: value8
      podSelector:
        matchLabels:
          key35: value29
          key13: value22
          key21: value2
